Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-35880

Incorrect error message when MAX_EXECUTION_TIME was exceeded

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Major
    • Resolution: Fixed
    • N/A
    • 12.2.2
    • Optimizer
    • None
    • Not for Release Notes
    • Q1/2026 Server Maintenance

    Description

      The error shown when MAX_EXECUTION_TIME is exceeded:

      ERROR 1969 (70100): Query execution was interrupted (max_statement_time exceeded)
      

      Is incorrect and can confuse users, as it refers to max_statement_time, another variable which is defined in seconds
      (rather than milliseconds like with MAX_EXECUTION_TIME) and employed, for example, in queries like:

      SET STATEMENT max_statement_time=1 FOR SELECT SLEEP(1.5);
      

      Which differ from queries using MAX_EXECUTION_TIME hints.

      An improved message would be:

      ERROR 1969 (70100): Query execution was interrupted (MAX_EXECUTION_TIME exceeded)
      

      Also note the statement vs execution time word difference.

      Attachments

        Issue Links

          Activity

            People

              oleg.smirnov Oleg Smirnov
              Roel Roel Van de Paar
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.