MDEV-35880: Fix incorrect error message when MAX_EXECUTION_TIME was exceeded

The error message shown when MAX_EXECUTION_TIME hint causes a timeout
incorrectly referred to "max_statement_time", which is a different
variable with different units (seconds vs milliseconds). This could
confuse users.

Before: "Query execution was interrupted (max_statement_time exceeded)"
After:  "Query was interrupted: execution time limit 1.5 sec exceeded"

The new message is neutral and accurate for both max_statement_time
system variable and MAX_EXECUTION_TIME optimizer hint, displaying the
actual timeout value that was exceeded.