sql/sql_class.cc
@@ -631,8 +631,29 @@ extern "C" void thd_kill_timeout(void *thd_)
 {
   THD *thd= static_cast<THD *>(thd_);
   thd->status_var.max_statement_time_exceeded++;
-  /* Kill queries that can't cause data corruptions */
-  thd->awake(KILL_TIMEOUT);
+
+  if (thd->slave_thread)
+  {
+    /* Slave threads use ER_SLAVE_STATEMENT_TIMEOUT without custom message */
+    thd->awake(KILL_TIMEOUT);
+  }
+  else
+  {
+    char msg[256], timeout_str[32];
+    double timeout_sec= thd->query_timer.period / 1000000.0;
+    size_t len= my_snprintf(timeout_str, sizeof(timeout_str), "%g", timeout_sec);
+    /*
+      Ensure at least one decimal digit (e.g., "1" -> "1.0"),
+      but not for scientific notation
+    */
+    if (!strchr(timeout_str, '.') && !strchr(timeout_str, 'e'))
+      len+= my_snprintf(timeout_str + len, sizeof(timeout_str) - len, ".0");
+    my_snprintf(timeout_str + len, sizeof(timeout_str) - len, " sec");
+    my_snprintf(msg, sizeof(msg), ER_THD(thd, ER_STATEMENT_TIMEOUT), timeout_str);
+
+    /* Kill queries that can't cause data corruptions */
+    thd->awake(KILL_TIMEOUT, ER_STATEMENT_TIMEOUT, msg);
+  }
 }
 
 const char *thd_where(THD *thd)
@@ -2060,7 +2081,9 @@ void add_diff_to_status(STATUS_VAR *to_var, STATUS_VAR *from_var,
         NOT_KILLED is used to awake a thread for a slave
 */
 extern std::atomic<my_thread_id> shutdown_thread_id;
-void THD::awake_no_mutex(killed_state state_to_set)
+void THD::awake_no_mutex(killed_state state_to_set,
+                         int killed_errno_arg,
+                         const char *killed_err_msg_arg)
 {
   DBUG_ENTER("THD::awake_no_mutex");
   DBUG_PRINT("enter", ("this: %p current_thd: %p  state: %d",
@@ -2078,7 +2101,7 @@ void THD::awake_no_mutex(killed_state state_to_set)
   if (killed >= KILL_CONNECTION)
     state_to_set= killed;
 
-  set_killed_no_mutex(state_to_set);
+  set_killed_no_mutex(state_to_set, killed_errno_arg, killed_err_msg_arg);
 
   if (state_to_set >= KILL_CONNECTION || state_to_set == NOT_KILLED)
   {
